# gifts-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  factories.py  pyproject.toml  railway.json  requirements.txt
.github/: docker-compose.yaml
.github/workflows/: deploy.yaml  django.yaml
auth/: serializers.py  urls.py  views.py
deploy/: docker-compose.yml
gifts/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
gifts/migrations/: 0001_create_gift_model.py  0002_create_checkout_model.py  0003_create_checkoutitem_model.py  0004_checkout_message.py  0005_checkout_br_code.py
gifts/models/: checkout.py  checkout_item.py  gift.py
gifts/services/: pix.py
gifts/tests/: test_gift_view_set.py  test_models.py
settings/: settings.py  urls.py
